# capfile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
fuzz/fuzz_targets/: fuzz_pcap.rs  fuzz_pcapng.rs
src/: error.rs  lib.rs  main.rs  reader.rs  writer.rs
src/dissect/: dns.rs  ethernet.rs  icmp.rs  ipv4.rs  ipv6.rs  mod.rs  tcp.rs  udp.rs
src/format/: mod.rs  pcap.rs  pcapng.rs
src/reader/: mmap.rs
tests/: conftest.py  generate_fixtures.py  integration.rs  test_system.py
tests/fixtures/: simple.pcap  simple.pcapng
