[package]
name = "capfile"
version = "0.1.2"
edition = "2021"
description = "Pure Rust crate for reading/writing pcap/pcapng files with zero-copy parsing"
license = "Apache-2.0"
authors = ["Yoav Haimov <haimovyoav@gmail.com>"]
repository = "https://github.com/Zikithezikit/capfile"
homepage = "https://github.com/Zikithezikit/capfile"

[dependencies]
winnow = "0.6"
memmap2 = "0.9"
thiserror = "2"

[dev-dependencies]
cargo-fuzz = "0.11"

[profile.release]
lto = true
codegen-units = 1

[features]
default = ["std"]
std = []

[[test]]
name = "integration"
path = "tests/integration.rs"

[lib]
name = "capfile"
path = "src/lib.rs"

[[bin]]
name = "capfile"
path = "src/main.rs"
